tests/purs/warning/ImplicitImport.purs
-- @shouldWarnWith ImplicitImport
-- @shouldWarnWith ImplicitImport
module Main where

import Prelude
import Effect

main :: Effect Unit
main = pure unit
